@@ -1,5 +1,9 @@
 2006-01-12  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/gmconf/gmconf-glib.c: More gnomemeeting -> ekiga renaming.
+
+2006-01-12  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/statusicon.cpp: Added a missing #include for win32.
 
 2006-01-12  Julien Puydt  <jpuydt@free.fr>
